--- a/Practica02/styles.css
+++ b/Practica02/styles.css
@@ -1,5 +1,22 @@
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: whitesmoke;
+}
+
 h1 {
-  font-size: 100px;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#pokemonList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .pokemonCard {
@@ -12,7 +29,7 @@ h1 {
   padding: 10px;
   text-align: center;
   width: 150px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  box-shadow: 10px 4px 6px rgba(0, 0, 0, 0.4);
 }
 
 .pokemonImage {
