--- a/Practica02/styles.css
+++ b/Practica02/styles.css
@@ -16,7 +16,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
 }
 
 .pokemonCard {
@@ -30,6 +30,7 @@ h1 {
   text-align: center;
   width: 150px;
   box-shadow: 10px 4px 6px rgba(0, 0, 0, 0.4);
+  margin-top: 20px;
 }
 
 .pokemonImage {
